--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,17 @@
 {
+  "cleanUrls": true,
+  "static": {
+    "frame.html": {
+      "contentType": "text/html; charset=utf-8"
+    }
+  },
   "headers": [
     {
-      "source": "/(.*)",
+      "source": "/frame.html",
       "headers": [
+        { "key": "Content-Type", "value": "text/html; charset=utf-8" },
         { "key": "X-Frame-Options", "value": "ALLOWALL" },
-        { "key": "Access-Control-Allow-Origin", "value": "*" }
+        { "key": "Cache-Control", "value": "no-cache" }
       ]
     }
   ]
